# geometric-coarse-curvature

./: LICENSE  README.md  pyproject.toml  test.ipynb
algorithms/: shortest_paths.py  transport_maps.py  triangular_transport.py
analyzers/: __init__.py  analyzers.py  curvature_convergence_analyzer.py
graphs/: geometric_graphs.py
manifolds/: __init__.py  base.py  geometric_graph.py  hypersphere.py  manifold.py  model_spaces.py
notebooks/: hypersphere_coarse_curvature.ipynb  hypersphere_coarse_curvature.py  hypersphere_extrinsic_curvature.py  hypersphere_ricci_curvature.py  sphere_second_fundamental_form.ipynb
structures/: __init__.py  geometric_graph.py  point_cloud.py
tests/: hypersphere_extrinsic_curvature.py  hypersphere_ricci_curvature.py
util/: __init__.py  circulant_tensor.py  util.py
