[tool.poetry]
name = "geometric-coarse-curvature"
version = "0.1.0"
description = ""
authors = ["Benedikt Petko <benedikt.petko@gmail.com>"]
readme = "README.md"
packages = [{include = "geometric_coarse_curvature"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
