[tool.poetry]
name = "geometric-coarse-curvature"
version = "0.1.0"
description = ""
authors = ["Benedikt Petko <benedikt.petko@gmail.com>"]
readme = "README.md"
packages = [{include = "geometric_coarse_curvature"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
